# diversity-ideas

./: .gitattributes  .gitignore  README.md  hello.py  pyproject.toml
.codegenie/customizations/: test.md
config/: brown-opinions.yaml  colombia-op-eds.yaml  cornell-opinion.yaml  dartmouth-opinion.yaml  harvard-columns.yaml  harvard-editorials.yaml  harvard-op-eds.yaml  princeton-opinion.yaml  stanford-opinions.yaml  swarthmore-opinions.yaml  ucdavis-opinions.yaml  ucr-opinions.yaml  ucsantacruz-opinions.yaml  ucsb-opinions.yaml  ucsd-opinions.yaml  uoregon-columns.yaml  upenn-opinion.yaml  utaustin-columns.yaml  yale-opinion.yaml
dailybruin/: scrapy.cfg
dailybruin/dailybruin/: items.py  middlewares.py  pipelines.py  settings.py
data/: brown-opinions.parquet  cornell-opinion.parquet  dartmouth-opinion.parquet  harvard-columns.parquet  harvard-editorials.parquet  harvard-op-eds.parquet  princeton-opinion.parquet  stanford-opinions.parquet  swarthmore-opinions.parquet  ucdavis-opinions.parquet  ucr-opinions.parquet  ucsantacruz-opinion.parquet  ucsb-opinion.parquet  ucsd-opinion.parquet  uoregon-opinion.parquet  upenn-opinion.parquet  utaustin-opinions.parquet  yale-opinion.parquet
logs/: log.html
notebooks/: 01.  Accounting College Catalog.ipynb
notebooks/2023/: stanford.ipynb
notebooks/2024/: brown.ipynb  cornell.ipynb  dartmouth.ipynb  embedding.ipynb  harvard-columns.ipynb  harvard-editorials.ipynb  harvard-op-eds.ipynb  harvard.ipynb  infinite-scroll.ipynb  princeton.ipynb  stanford-cynicism.ipynb  stanford.ipynb  ucdavis.ipynb  upenn.ipynb  yale.ipynb
src/: crawl2parquet.py  crawlcolumbia2parquet.py  readParquet.py
src/archive/: berkeley2parquet.py  ouraws-PREV.py  ourrequests-PREV.py  readParquet.py  swarthmore2parquet.py
src/ingest/: scraper.py
(+15 files in other folders)
