[project]
name = "diversity-ideas"
version = "0.1.0"
description = "Studying diversity of ideas across college campuses"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.87",
    "bs4>=0.0.2",
    "fake-useragent>=2.0.3",
    "openai>=1.58.1",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.12.1",
    "scrapingant-client>=2.1.0",
    "selenium>=4.27.1",
    "spider-client>=0.1.25",
    "webdriver-manager>=4.0.2",
    "pyyaml>=6.0.2",
    "ipykernel>=6.29.5",
    "nltk>=3.9.1",
    "matplotlib>=3.10.0",
    "scipy>=1.14.1",
    "llama-index-readers-web>=0.1.12",
    "scrapy>=2.12.0",
    "aiofiles>=24.1.0",
    "ace-tools>=0.0",
    "scikit-learn>=1.6.1",
    "llama-index-embeddings-ollama>=0.2.0",
    "llama-index-llms-ollama>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
